[gd_scene load_steps=4 format=3 uid="uid://bcmreqckndjor"]

[ext_resource type="Script" uid="uid://d3yfi7x88gfjt" path="res://script/account.gd" id="1_ujsm1"]
[ext_resource type="Material" uid="uid://2x3k2shhnrnq" path="res://shader/shaking.tres" id="2_0r524"]
[ext_resource type="Texture2D" uid="uid://dadgywhnpctu5" path="res://assets/img/avas.png" id="3_mntt1"]

[node name="Account" type="VBoxContainer"]
offset_right = 128.0
offset_bottom = 199.0
size_flags_horizontal = 4
script = ExtResource("1_ujsm1")

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 2
text = "Выбрать"

[node name="LabelName" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Vladislav"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="."]
material = ExtResource("2_0r524")
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("3_mntt1")
region_rect = Rect2(682, 0, 341, 341)

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 23
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 2

[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
